# pip2conda

./: .flake8  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: lint.yml  pypi.yml  test.yml
.gitlab/ci/: build.yml  qa.yml  test.yml  twine.yml  uv.yml
docs/: conf.py  environment.yml  index.rst  installation.rst  usage.rst
pip2conda/: __init__.py  __main__.py  pip2conda.py
pip2conda/tests/: __init__.py  test_pip2conda.py
