[metadata]
name = pip2conda
author = Duncan Macleod
author_email = duncanmmacleod@gmail.com
description = Translate pip requirements into conda requirements
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://github.com/duncanmmacleod/pip2conda/
download_url = https://pypi.org/project/pip2conda/
project_urls =
	Bug Tracker = https://github.com/duncanmmacleod/pip2conda/issues
	Documentation = https://pip2conda.readthedocs.io
	Source Code = https://github.com/duncanmmacleod/pip2conda.git
# classifiers
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.7
install_requires =
	grayskull
	requests
	setuptools
	toml

[options.entry_points]
console_scripts =
	pip2conda = pip2conda.pip2conda:main

# -- tools

[flake8]
select =
	E,
	F,
	W,
ignore =
	W503,
exclude =
	pip2conda/_version.py,
per-file-ignores =
	__init__.py:F401
